--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,20 +1,9 @@
-name: Civilization
+name: Tribes
 version: 1.0.0
-main: com.technovision.civilization.CivilizationPlugin
+main: com.technovision.tribes.TribesPlugin
 api-version: 1.20
-depend: [WorldEdit, WorldGuard, Vault]
 commands:
-  civ:
-    description: Manage your civilization
-    usage: /civ
-    aliases: [civilization]
-  town:
-    description: Manage your town
-    usage: /town
+  tribe:
+    description: Manage your tribe
+    usage: /tribe
     aliases: [t]
-  accept:
-    description: Accept a question sent to you
-    usage: /accept
-  deny:
-    description: Deny a question sent to you
-    usage: /deny
