Handle edge cases for group creation

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,5 @@
 # +------------------------------------------------------+ #
-# |                 Civilization (Config)                | #
+# |                 Crafted Kingdoms (Config)            | #
 # +------------------------------------------------------+ #
 # If you have problems, join the help support channel:
 # https://discord.gg/gFwVVTE
