--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
-name: Tribes
+name: CraftedKingdoms
 version: 1.0.0
-main: com.technovision.tribes.TribesPlugin
+main: com.technovision.craftedkingdoms.CraftedKingdoms
 api-version: 1.20
 commands:
-  tribe:
-    description: Manage your tribe
-    usage: /tribe
-    aliases: [t]
+  group:
+    description: Manage your group
+    usage: /group
+    aliases: [g]
