Add soul shard commands

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,3 +11,7 @@ commands:
     description: Protect blocks for your groups
     usage: /fortify
     aliases: [f]
+  soulshard:
+    description: Manage your soul shards
+    usage: /soulshard
+    aliases: [shard, ss]
