--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,3 +15,7 @@ commands:
     description: Manage your soul shards
     usage: /soulshard
     aliases: [shard, ss]
+  chat:
+    description: Switch chat groups
+    usage: /chat
+    aliases: [c]
