Add /snitch commands

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -19,3 +19,6 @@ commands:
     description: Switch chat groups
     usage: /chat
     aliases: [c]
+  snitch:
+    description: Manage your group snitches
+    usage: /snitch
